--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="/menu.html"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+                        <a class="nav-link" href="/contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a>
                     </li>
 
                 </ul>
