--- a/index.html
+++ b/index.html
@@ -46,13 +46,18 @@
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-4">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-4 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-4">
+                    <div class="col-sm-12">
+                    <a type="button" class="btn btn-warning font-weight-bold align-self-center" href="#reserveform">Reserve a Table</a>
+                </div>
                 </div>
                 <div>
                 </div>
@@ -70,7 +75,7 @@
                         <img class="d-flex mr-3 img-thumbnail align-self-center"
                                 src="img/uthappizza.png" alt="Uthappizza">
                         <div class="media-body">
-                            <h2 class="mt-0">Uthappizza</h2>
+                            <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                             <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                                 Italian pizza, topped with Cerignola olives, ripe vine
                                 cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -84,10 +89,17 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
-                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
-                    $19.99 per person </p>
+                <div class="media">
+
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
+                            $19.99 per person </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                    src="img/buffet.png" alt="Uthappizza">
+                </div>
             </div>
         </div>
 
@@ -112,7 +124,48 @@
             </div>
         </div>
     </div>
+<div id="reserveform">
+        <div class="row">
+            <div class="col"></div>
+            <div class="col-8">
+        <div class="card">
+            <h3 class="card-header bg-warning text-white">Reserve a table</h3>
+            <div class="card-body">
+                <form>
+                <dl class="form-group row">
+                    <dt class="col-12 col-sm-4">Number of Guests</dt>
+                    <dd class="col col-sm-1">  <input type="radio" id="1" name="1" value="1">
+                    <label for="1">1</label><br></dd>
+                    <dd class="col col-sm-1">  <input type="radio" id="2" name="2" value="2">
+                    <label for="2">2</label><br></dd>
+                    <dd class="col col-sm-1">  <input type="radio" id="3" name="3" value="3">
+                    <label for="3">3</label><br></dd>
+                    <dd class="col col-sm-1">  <input type="radio" id="4" name="4" value="4">
+                    <label for="4">4</label><br></dd>
+                    <dd class="col col-sm-1">  <input type="radio" id="5" name="5" value="5">
+                    <label for="5">5</label><br></dd>
+                    <dd class="col col-sm-1">  <input type="radio" id="6" name="6" value="6">
+                    <label for="6">6</label><br></dd>
+                </dl>
+                <dl class="form-group row">
+                    <dt class="col col-sm-4">Date and time</dt>
+                    <dd class="col col-sm-8">
+                        <input type="date" id="date" name="date"> &nbsp; <input type="time" id="time" name="time">
+                    <br></dd>
+                        <dt class="col-sm-4"></dt>
+                        <dd class="col-sm-4">
+                        <button type="submit" class="btn btn-primary">Reserve</button>
+                    </dd>
+                </dl>
+            </form>
+            </div>
+        </div>
+    </div>
+    <div class="col"></div>
+</div>
 
+    </div>
+    <br>
     <footer class="footer">
         <div class="container">
             <div class="row">
